// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Activation Key Wizard Confirms on close one next has been clicked 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-7"
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-5 pf-modal-part-6"
          aria-modal="true"
          class="pf-c-modal-box pf-m-warning pf-m-sm"
          data-ouia-component-id="OUIA-Generated-Modal-large-6"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-5"
          role="dialog"
        >
          <button
            aria-disabled="false"
            aria-label="Close"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-large-6-ModalBoxCloseButton"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </button>
          <header
            class="pf-c-modal-box__header"
          >
            <h1
              class="pf-c-modal-box__title pf-m-icon"
              id="pf-modal-part-6"
            >
              <span
                class="pf-c-modal-box__title-icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </span>
              <span
                class="pf-u-screen-reader"
              >
                Warning alert:
              </span>
              <span
                class="pf-c-modal-box__title-text"
              >
                Exit activation key creation?
              </span>
            </h1>
          </header>
          <div
            class="pf-c-modal-box__body"
            id="pf-modal-part-7"
          >
            <p>
              All inputs will be discarded.
            </p>
          </div>
          <footer
            class="pf-c-modal-box__footer"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-primary"
              data-ouia-component-id="OUIA-Generated-Button-primary-7"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Exit
            </button>
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-7"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Stay
            </button>
          </footer>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard Doesn't confirm on close when nothing has been done 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-4"
          aria-modal="true"
          class="pf-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-5"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-4"
          role="dialog"
        >
          
          <div
            class="pf-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-c-wizard__header"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain pf-c-wizard__close"
                data-ouia-component-id="OUIA-Generated-Button-plain-5"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
              <h2
                aria-label="Create activation key"
                class="pf-c-title pf-m-3xl pf-c-wizard__title"
                data-ouia-component-id="OUIA-Generated-Title-13"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
                id="pf-wizard-title-4"
              >
                Create activation key
              </h2>
              
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-c-wizard__toggle"
            >
              <span
                class="pf-c-wizard__toggle-list"
              >
                <span
                  class="pf-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Name
                </span>
              </span>
              <span
                class="pf-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-c-wizard__outer-wrap"
            >
              <div
                class="pf-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-4"
                  class="pf-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-5"
                  data-ouia-component-type="PF4/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-c-wizard__nav-list"
                  >
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-17"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-18"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="1"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-19"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="2"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-20"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="3"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  aria-label="Create activation key content"
                  aria-labelledby="pf-wizard-title-4"
                  class="pf-c-wizard__main"
                >
                  <div
                    class="pf-c-wizard__main-body"
                  >
                    <h2
                      class="pf-c-title pf-m-xl pf-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-14"
                      data-ouia-component-type="PF4/Title"
                      data-ouia-safe="true"
                    >
                      Name key
                    </h2>
                    <p
                      class="pf-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-9"
                      data-ouia-component-type="PF4/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      This name cannot be modified after the activation key is created.
                    </p>
                    <form
                      class="pf-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-c-form__group"
                      >
                        <div
                          class="pf-c-form__group-label"
                        >
                          <label
                            class="pf-c-form__label"
                            for="activation-key-name"
                          >
                            <span
                              class="pf-c-form__label-text"
                            >
                              Name
                            </span>
                            <span
                              aria-hidden="true"
                              class="pf-c-form__label-required"
                            >
                               
                              *
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-c-form__group-control"
                        >
                          <input
                            aria-invalid="false"
                            class="pf-c-form-control"
                            data-ouia-component-id="OUIA-Generated-TextInputBase-5"
                            data-ouia-component-type="PF4/TextInput"
                            data-ouia-safe="true"
                            id="activation-key-name"
                            required=""
                            type="text"
                            value=""
                          />
                          <div
                            aria-live="polite"
                            class="pf-c-form__helper-text"
                            id="activation-key-name-helper"
                          >
                            Your activation key name must be unique and must contain only numbers, letters, underscores, and hyphens.
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
              <footer
                class="pf-c-wizard__footer"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-5"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  Next
                </button>
                <button
                  aria-disabled="true"
                  class="pf-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-5"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <div
                  class="pf-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-5"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard renders page 1 correctly 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-0"
          aria-modal="true"
          class="pf-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-1"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-0"
          role="dialog"
        >
          
          <div
            class="pf-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-c-wizard__header"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain pf-c-wizard__close"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
              <h2
                aria-label="Create activation key"
                class="pf-c-title pf-m-3xl pf-c-wizard__title"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
                id="pf-wizard-title-0"
              >
                Create activation key
              </h2>
              
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-c-wizard__toggle"
            >
              <span
                class="pf-c-wizard__toggle-list"
              >
                <span
                  class="pf-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Name
                </span>
              </span>
              <span
                class="pf-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-c-wizard__outer-wrap"
            >
              <div
                class="pf-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-0"
                  class="pf-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-1"
                  data-ouia-component-type="PF4/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-c-wizard__nav-list"
                  >
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-1"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-2"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="1"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-3"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="2"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-4"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="3"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  aria-label="Create activation key content"
                  aria-labelledby="pf-wizard-title-0"
                  class="pf-c-wizard__main"
                >
                  <div
                    class="pf-c-wizard__main-body"
                  >
                    <h2
                      class="pf-c-title pf-m-xl pf-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-2"
                      data-ouia-component-type="PF4/Title"
                      data-ouia-safe="true"
                    >
                      Name key
                    </h2>
                    <p
                      class="pf-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-1"
                      data-ouia-component-type="PF4/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      This name cannot be modified after the activation key is created.
                    </p>
                    <form
                      class="pf-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-c-form__group"
                      >
                        <div
                          class="pf-c-form__group-label"
                        >
                          <label
                            class="pf-c-form__label"
                            for="activation-key-name"
                          >
                            <span
                              class="pf-c-form__label-text"
                            >
                              Name
                            </span>
                            <span
                              aria-hidden="true"
                              class="pf-c-form__label-required"
                            >
                               
                              *
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-c-form__group-control"
                        >
                          <input
                            aria-invalid="false"
                            class="pf-c-form-control"
                            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                            data-ouia-component-type="PF4/TextInput"
                            data-ouia-safe="true"
                            id="activation-key-name"
                            required=""
                            type="text"
                            value=""
                          />
                          <div
                            aria-live="polite"
                            class="pf-c-form__helper-text"
                            id="activation-key-name-helper"
                          >
                            Your activation key name must be unique and must contain only numbers, letters, underscores, and hyphens.
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
              <footer
                class="pf-c-wizard__footer"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  Next
                </button>
                <button
                  aria-disabled="true"
                  class="pf-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <div
                  class="pf-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard renders page 2 correctly 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-1"
          aria-modal="true"
          class="pf-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-2"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-1"
          role="dialog"
        >
          
          <div
            class="pf-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-c-wizard__header"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain pf-c-wizard__close"
                data-ouia-component-id="OUIA-Generated-Button-plain-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
              <h2
                aria-label="Create activation key"
                class="pf-c-title pf-m-3xl pf-c-wizard__title"
                data-ouia-component-id="OUIA-Generated-Title-3"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
                id="pf-wizard-title-1"
              >
                Create activation key
              </h2>
              
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-c-wizard__toggle"
            >
              <span
                class="pf-c-wizard__toggle-list"
              >
                <span
                  class="pf-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-c-wizard__toggle-num"
                  >
                    2
                  </span>
                   
                  Workload
                </span>
              </span>
              <span
                class="pf-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-c-wizard__outer-wrap"
            >
              <div
                class="pf-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-1"
                  class="pf-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-2"
                  data-ouia-component-type="PF4/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-c-wizard__nav-list"
                  >
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-5"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-6"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="1"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-7"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="2"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-8"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="3"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  aria-label="Create activation key content"
                  aria-labelledby="pf-wizard-title-1"
                  class="pf-c-wizard__main"
                >
                  <div
                    class="pf-c-wizard__main-body"
                  >
                    <h2
                      class="pf-c-title pf-m-xl pf-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-5"
                      data-ouia-component-type="PF4/Title"
                      data-ouia-safe="true"
                    >
                      Select Workload
                    </h2>
                    <p
                      class="pf-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-3"
                      data-ouia-component-type="PF4/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      Choose a workload option to associate an appropriate selection of repositories to the activation key. Repositories can be edited on the activation key detail page.
                       
                    </p>
                    <div
                      class="pf-c-radio pf-u-mb-md"
                    >
                      <input
                        aria-invalid="false"
                        checked=""
                        class="pf-c-radio__input"
                        data-ouia-component-id="OUIA-Generated-Radio-1"
                        data-ouia-component-type="PF4/Radio"
                        data-ouia-safe="true"
                        id="Latest release"
                        name="Latest release"
                        type="radio"
                      />
                      <label
                        class="pf-c-radio__label"
                        for="Latest release"
                      >
                        Latest release
                      </label>
                    </div>
                    <div
                      class="pf-c-radio pf-u-mb-md"
                    >
                      <input
                        aria-invalid="false"
                        class="pf-c-radio__input"
                        data-ouia-component-id="OUIA-Generated-Radio-2"
                        data-ouia-component-type="PF4/Radio"
                        data-ouia-safe="true"
                        disabled=""
                        id="Extended support"
                        name="Extended support"
                        type="radio"
                      />
                      <label
                        class="pf-c-radio__label pf-m-disabled"
                        for="Extended support"
                      >
                        Extended support
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <footer
                class="pf-c-wizard__footer"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  Next
                </button>
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-secondary"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Back
                </button>
                <div
                  class="pf-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard renders page 3 correctly 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-2"
          aria-modal="true"
          class="pf-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-3"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-2"
          role="dialog"
        >
          
          <div
            class="pf-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-c-wizard__header"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain pf-c-wizard__close"
                data-ouia-component-id="OUIA-Generated-Button-plain-3"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
              <h2
                aria-label="Create activation key"
                class="pf-c-title pf-m-3xl pf-c-wizard__title"
                data-ouia-component-id="OUIA-Generated-Title-6"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
                id="pf-wizard-title-2"
              >
                Create activation key
              </h2>
              
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-c-wizard__toggle"
            >
              <span
                class="pf-c-wizard__toggle-list"
              >
                <span
                  class="pf-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-c-wizard__toggle-num"
                  >
                    3
                  </span>
                   
                  System purpose
                </span>
              </span>
              <span
                class="pf-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-c-wizard__outer-wrap"
            >
              <div
                class="pf-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-2"
                  class="pf-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-3"
                  data-ouia-component-type="PF4/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-c-wizard__nav-list"
                  >
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-9"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-10"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="1"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-11"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="2"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-12"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="3"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  aria-label="Create activation key content"
                  aria-labelledby="pf-wizard-title-2"
                  class="pf-c-wizard__main"
                >
                  <div
                    class="pf-c-wizard__main-body"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <span
                        aria-label="Contents"
                        aria-valuetext="Loading..."
                        class="pf-c-spinner pf-m-xl"
                        role="progressbar"
                      >
                        <span
                          class="pf-c-spinner__clipper"
                        />
                        <span
                          class="pf-c-spinner__lead-ball"
                        />
                        <span
                          class="pf-c-spinner__tail-ball"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <footer
                class="pf-c-wizard__footer"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  Next
                </button>
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-secondary"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Back
                </button>
                <div
                  class="pf-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard renders page 4 correctly 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-3"
          aria-modal="true"
          class="pf-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-4"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-3"
          role="dialog"
        >
          
          <div
            class="pf-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-c-wizard__header"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain pf-c-wizard__close"
                data-ouia-component-id="OUIA-Generated-Button-plain-4"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
              <h2
                aria-label="Create activation key"
                class="pf-c-title pf-m-3xl pf-c-wizard__title"
                data-ouia-component-id="OUIA-Generated-Title-9"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
                id="pf-wizard-title-3"
              >
                Create activation key
              </h2>
              
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-c-wizard__toggle"
            >
              <span
                class="pf-c-wizard__toggle-list"
              >
                <span
                  class="pf-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-c-wizard__toggle-num"
                  >
                    4
                  </span>
                   
                  Review
                </span>
              </span>
              <span
                class="pf-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-c-wizard__outer-wrap"
            >
              <div
                class="pf-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-3"
                  class="pf-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-4"
                  data-ouia-component-type="PF4/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-c-wizard__nav-list"
                  >
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-13"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-14"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="1"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        class="pf-c-wizard__nav-link"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-15"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="2"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-16"
                        data-ouia-component-type="PF4/WizardNavItem"
                        data-ouia-safe="true"
                        id="3"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  aria-label="Create activation key content"
                  aria-labelledby="pf-wizard-title-3"
                  class="pf-c-wizard__main"
                >
                  <div
                    class="pf-c-wizard__main-body"
                  >
                    <h2
                      class="pf-c-title pf-m-xl pf-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-12"
                      data-ouia-component-type="PF4/Title"
                      data-ouia-safe="true"
                    >
                      Review
                    </h2>
                    <p
                      class="pf-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-8"
                      data-ouia-component-type="PF4/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      Review the following information and click 
                      <b>
                        Create
                      </b>
                       to create the activation key.
                    </p>
                    <dl
                      class="pf-c-description-list pf-m-horizontal"
                      style="--pf-c-description-list--m-horizontal__term--width: 21ch;"
                    >
                      <div
                        class="pf-c-description-list__group"
                      >
                        <dt
                          class="pf-c-description-list__term"
                        >
                          <span
                            class="pf-c-description-list__text"
                          >
                            Name
                          </span>
                        </dt>
                        <dd
                          class="pf-c-description-list__description"
                        >
                          <div
                            class="pf-c-description-list__text"
                          />
                        </dd>
                      </div>
                      <div
                        class="pf-c-description-list__group"
                      >
                        <dt
                          class="pf-c-description-list__term"
                        >
                          <span
                            class="pf-c-description-list__text"
                          >
                            Workload
                          </span>
                        </dt>
                        <dd
                          class="pf-c-description-list__description"
                        >
                          <div
                            class="pf-c-description-list__text"
                          >
                            Latest release
                          </div>
                        </dd>
                      </div>
                      <div
                        class="pf-c-description-list__group"
                      >
                        <dt
                          class="pf-c-description-list__term"
                        >
                          <span
                            class="pf-c-description-list__text"
                          >
                            Role
                          </span>
                        </dt>
                        <dd
                          class="pf-c-description-list__description"
                        >
                          <div
                            class="pf-c-description-list__text"
                          >
                            Not defined
                          </div>
                        </dd>
                      </div>
                      <div
                        class="pf-c-description-list__group"
                      >
                        <dt
                          class="pf-c-description-list__term"
                        >
                          <span
                            class="pf-c-description-list__text"
                          >
                            Service level agreement (SLA)
                          </span>
                        </dt>
                        <dd
                          class="pf-c-description-list__description"
                        >
                          <div
                            class="pf-c-description-list__text"
                          >
                            Not defined
                          </div>
                        </dd>
                      </div>
                      <div
                        class="pf-c-description-list__group"
                      >
                        <dt
                          class="pf-c-description-list__term"
                        >
                          <span
                            class="pf-c-description-list__text"
                          >
                            Usage
                          </span>
                        </dt>
                        <dd
                          class="pf-c-description-list__description"
                        >
                          <div
                            class="pf-c-description-list__text"
                          >
                            Not defined
                          </div>
                        </dd>
                      </div>
                    </dl>
                  </div>
                </div>
              </div>
              <footer
                class="pf-c-wizard__footer"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-4"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  Create
                </button>
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-secondary"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-4"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Back
                </button>
                <div
                  class="pf-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
